# ai-companion

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  README_ja.md  README_ko.md  README_old.md  README_zh_cn.md  README_zh_tw.md  ai-companion.code-workspace  app.py  diffusion_converter.ipynb  installer_linux.sh  installer_linux_amd64_cpu.sh  installer_linux_amd64_cuda.sh  installer_macos.sh  installer_macos_arm64.sh  installer_windows.ps1  installer_windows_amd64.bat  installer_windows_amd64.ps1  installer_windows_amd64_wsl2.sh  mcp_config_example.json  mcp_servers.json  mcp_servers_profile_example.json  model_converter.ipynb  model_converter.py  notebook.ipynb  package-lock.json  package.json  preset_example.json  preset_maker.ipynb  preset_maker.py  provider_test.ipynb  pyproject.toml  requirements.txt  requirements_linux.txt  (+6 more)
ai-companion-desktop/: index.html  package-lock.json  package.json
ai-companion-frontend/: index.html  package.json
ai-companion-web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
characters_info/: aino_koito.txt  makotono_aoi.txt  minami_asuka.txt
config/: .gitignore  environment.env.example
depends/: requirements_linux_amd64.txt  requirements_linux_amd64_amd_gpu.txt  requirements_linux_colab_tpu.txt  requirements_macos_arm64.txt  requirements_macos_arm64_nightly.txt  requirements_windows_amd64_wsl2.txt  requirements_windows_arm64_wsl2.txt
docs/: MCP_SETUP.md
frontend/: package-lock.json  package.json
html/: html.html
models/: .gitignore
(+342 files in other folders)
