[project]
name = "ai-companion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ai-companion-core>=0.1.0,<0.2", "torch>=2.11.0,<3", "torchvision>=0.26.0,<0.27", "torchaudio>=2.11.0,<3"]

[errors]
bad-assignment = false
bad-return = false

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
ai-companion = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
